# rye-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.TEMPLATE.md  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: python-ci.yaml
src/: __init__.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .sqlfluff  Dockerfile  Makefile  compose.gpu.yml  compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_source}}/: __init__.py
