[project]
name = "rye-template"
version = "0.1.0"
description = "A template for rye projects"
authors = [
    { name = "osushinekotan", email = "spmt3710@gmail.com" }
]
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "rootutils>=1.0.7",
    "pytest>=7.4.4",
    "pre-commit>=3.6.0",
    "rich>=13.7.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "src:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "mypy>=1.8.0",
    "ruff>=0.1.13",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
target-version = "py311"
unfixable = ["F401", "F841"]
ignore = ["E501", "E402", "F401"]
line-length = 120

[tool.mypy]
python_version = "3.11"
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_any_generics = false
exclude = [
    "tests"
]
